--- a/inventory/intended/structured_configs/DC1-LEAF1A.yml
+++ b/inventory/intended/structured_configs/DC1-LEAF1A.yml
@@ -12,6 +12,7 @@ router_bgp:
       type: ipv4
       remote_as: '65101'
       next_hop_self: true
+      description: DC1-LEAF1B
       password: vnEaG8gMeQf3d3cN6PktXQ==
       maximum_routes: 12000
       send_community: all
@@ -302,6 +303,7 @@ daemon_terminattr:
   - 10.255.0.1:9910
   cvauth:
     method: key
+    key: ''
   cvvrf: MGMT
   smashexcludes: ale,flexCounter,hardware,kni,pulse,strata
   ingestexclude: /Sysdb/cell/1/agent,/Sysdb/cell/2/agent
@@ -777,8 +779,7 @@ route_maps:
         type: permit
         set:
         - origin incomplete
-        description: Make routes learned over MLAG Peer-link less preferred on spines
-          to ensure optimal routing
+        description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
   RM-CONN-2-BGP:
     sequence_numbers:
       10:
@@ -813,6 +814,7 @@ router_bfd:
     multiplier: 3
 ip_igmp_snooping:
   globally_enabled: true
+ip_virtual_router_mac_address: 00:1c:73:00:dc:01
 vxlan_interface:
   Vxlan1:
     description: DC1-LEAF1A_VTEP
@@ -879,7 +881,6 @@ vxlan_interface:
 virtual_source_nat_vrfs:
   Tenant_A_OP_Zone:
     ip_address: 10.255.1.3
-ip_virtual_router_mac_address: 00:1c:73:00:dc:01
 ntp:
   local_interface:
     name: Management1
