--- a/playbooks/dc1-fabric-deploy-cvp.yml
+++ b/playbooks/dc1-fabric-deploy-cvp.yml
@@ -13,14 +13,12 @@
         name: arista.avd.build_output_folders
 
     - name: generate intended variables
-      tags: [build, generate]
       import_role:
         name: arista.avd.eos_designs
 
     - name: generate device intended config and documentation
-      tags: [build, generate]
       import_role:
-        name: eos_cli_config_gen
+        name: arista.avd.eos_cli_config_gen
 
 - name: Configuration deployment with CVP
   hosts: cv_server
