--- a/inventory/intended/structured_configs/DC1-L2LEAF1A-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC1-L2LEAF1A-debug-vars.yml
@@ -23,6 +23,10 @@ local_users:
     sha512_password: $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
 cvp_instance_ip: 192.168.0.5
 cvp_ingestauth_key: ''
+custom_structured_configuration_daemon_terminattr:
+  cvauth:
+    method: token
+    token_file: /tmp/token
 mgmt_interface: Management1
 mgmt_interface_vrf: MGMT
 mgmt_gateway: 192.168.0.5
@@ -3011,7 +3015,7 @@ groups:
   - DC1-LEAF2B
   - DC1-L2LEAF1A
   - DC1-L2LEAF2A
-omit: __omit_place_holder__943dc7135feb3120cfe3d5978a48f6690d5b1810
+omit: __omit_place_holder__e23cae916207f4e935e97d7a8f9e65c20a7ba205
 ansible_version:
   string: 2.12.7
   full: 2.12.7
