--- a/inventory/intended/structured_configs/DC1-L2LEAF2A.yml
+++ b/inventory/intended/structured_configs/DC1-L2LEAF2A.yml
@@ -8,8 +8,9 @@ daemon_terminattr:
   cvaddrs:
   - 192.168.0.5:9910
   cvauth:
-    method: key
+    method: token
     key: ''
+    token_file: /tmp/token
   cvvrf: MGMT
   smashexcludes: ale,flexCounter,hardware,kni,pulse,strata
   ingestexclude: /Sysdb/cell/1/agent,/Sysdb/cell/2/agent
