--- a/playbooks/dc1-upload-configlets.yml
+++ b/playbooks/dc1-upload-configlets.yml
@@ -7,10 +7,12 @@
     - arista.avd
     - arista.cvp
   tasks:
-    - name: 'upload configlets to cloudvision {{inventory_hostname}}'
+    - name: upload cvp configlets
       import_role:
         name: arista.avd.cvp_configlet_upload
       vars:
-        configlet_directory: '{{ configlet_dir_var }}'
-        configlets_cvp_prefix: '{{ configlets_prefix_var }}'
-        file_extension: '{{configlet_file_extension}}'
+        configlet_directory: 'inventory/intended/configs'
+        file_extension: 'cfg'
+        configlets_cvp_prefix: 'none'
+        execute_tasks: false
+        cv_collection: v3
